@@ -1168,6 +1168,7 @@
   */
 #endif // CLOSEDIR_VOID
 
+#ifdef BUILD_SERVER
 /** \file server/resources.cpp
   * A file generated by Qt that contains graphics data
   *
@@ -1211,3 +1212,4 @@
   * An internal Qt function
   *
   */
+#endif // BUILD_SERVER
