@@ -30,6 +30,20 @@
      
 <!-- Add here a version when it is finished (when switching to Ver++) -->
  
+    <tr class="regTest2">
+       <td>v 0.0.5-185</td>
+       <td>01 oct 2008</td>
+       <td align="right">62 495</td>   
+       <td align="right">13</td> 
+       <td>220</td>    
+       <td>OK</td>    
+       <td><font color="red">No</font></td>  
+       <td>-</td>
+       <td>2300</td>
+       <td>207</td>
+       <td>Some MultiColumnList scissor bugs fixed.</td>
+       <td>Passed</td>
+     </tr>
     <tr class="regTest1">
        <td>v 0.0.5-184</td>
        <td>06 sep 2008</td>
@@ -42,7 +56,7 @@
        <td>-</td>
        <td>2184</td>
        <td>157</td>
-       <td>Unitests implementsations and bugfixes.</td>
+       <td>Unitests implementations and bugfixes.</td>
        <td>Passed</td>
      </tr>
     <tr class="regTest2">
@@ -531,5 +545,5 @@
    <hr>
 
      
-<!-- hhmts start -->Last modified: Sat Sep  6 15:55:46 CEST 2008 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Wed Oct  1 23:49:31 CEST 2008 <!-- hhmts end -->
 </body> </html>
