@@ -24,6 +24,7 @@
   * Implements the unit tests of the LanguageListItem class
   *
   * Modifications :
+  * - 01 oct 2008 : Implementation of tests
   * - 27 sep 2008 : Starting implementation
   *
   */
@@ -33,6 +34,10 @@
 
 /** A test class for LanguageListItem widget
   *
+  * I do not test the getComboText() and getLanguageCountry() functions
+  * as the results are only graphical. If these functions fail, it is not
+  * an algorythm error.
+  *
   */
 template<class TESTEDCLASS> 
 class LanguageListItemTest : public CPPUNIT_NS::TestFixture 
@@ -40,6 +45,37 @@ class LanguageListItemTest : public CPPUNIT_NS::TestFixture
 
   /// Start the test 
   CPPUNIT_TEST_SUITE( LanguageListItemTest );
+
+  /** Tests the item's initial values
+    *
+    * \sa testInitialValues
+    *
+    */
+  CPPUNIT_TEST( testInitialValues);
+
+  /// Tests the item's language code
+  CPPUNIT_TEST( testLanguageCode );
+
+  /// Tests the item's country code
+  CPPUNIT_TEST( testCountryCode );
+
+  /// Tests the item's language text
+  CPPUNIT_TEST( testLanguageText );
+
+  /// Tests the item's country code
+  CPPUNIT_TEST( testCountryText );
+
+  /// Tests the set complete percent in string format
+  CPPUNIT_TEST( testSetCompletePercentString );
+
+  /// Tests the set complete percent in float format
+  CPPUNIT_TEST( testSetCompletePercentFloat );
+
+  /// Tests the setDefault function
+  CPPUNIT_TEST( testSetDefault );
+
+  /// Tests the setDefault function
+  CPPUNIT_TEST( testSetCurrent );
 
   /// The CppUnit test end macro
   CPPUNIT_TEST_SUITE_END();
@@ -74,7 +110,108 @@ public:
     delete this->m_instance; 
   }
   
+  /** Tests the initial values
+    *
+    * I do not test the getComboText() returned string because its
+    * value is not an empty string.
+    *
+    */
+  void testInitialValues(){
+    // Testing string typed field
+    CPPUNIT_ASSERT( strcmp(m_instance->getLanguageCode(), "") == 0 );
+    CPPUNIT_ASSERT( strcmp(m_instance->getCountryCode(), "") == 0 );
+    CPPUNIT_ASSERT( strcmp(m_instance->getLanguageText(), "") == 0 );
+    CPPUNIT_ASSERT( strcmp(m_instance->getCountryText(), "") == 0 );
+    CPPUNIT_ASSERT( strcmp(m_instance->getLanguageCountry(), "_") == 0 );
 
+    // Testing boolean values
+    CPPUNIT_ASSERT( m_instance->isDefault() == false );
+    CPPUNIT_ASSERT( m_instance->isCurrent() == false );
 
+    // Testing a float value
+    CPPUNIT_ASSERT( m_instance->getCompletePerCent() == 0.0f);
+
+  }
+
+  /** Tests the language code member
+    *
+    */
+  void testLanguageCode(){
+    m_instance->setLanguageCode("FR");
+    string lc =  m_instance->getLanguageCode();
+    CPPUNIT_ASSERT( lc=="FR" );
+  }
+
+  /** Tests the country code member
+    *
+    */
+  void testCountryCode(){
+    m_instance->setCountryCode("fr");
+    string lc =  m_instance->getCountryCode();
+    CPPUNIT_ASSERT( lc=="fr" );
+    
+  }
+
+  /** Tests the language text member
+    *
+    */
+  void testLanguageText(){
+    m_instance->setLanguageText("french");
+    string lc =  m_instance->getLanguageText();
+    CPPUNIT_ASSERT( lc=="french" );
+  }
+
+  /** Tests the country text member
+    *
+    */
+  void testCountryText(){
+    m_instance->setCountryText("france");
+    string lc =  m_instance->getCountryText();
+    CPPUNIT_ASSERT( lc=="france" );
+  }
+
+  /** Tests the setCompletePercent in string format
+    *
+    */
+  void testSetCompletePercentString(){
+    m_instance->setCompletePerCent("90");
+    CPPUNIT_ASSERT( m_instance->getCompletePerCent() == 90.0f);
+    
+    m_instance->setCompletePerCent("25.45");
+    CPPUNIT_ASSERT( m_instance->getCompletePerCent() == 25.45f);
+  }
+
+  /** Tests the setCompletePercent in float format
+    *
+    */
+  void testSetCompletePercentFloat(){
+    m_instance->setCompletePerCent(90.0f);
+    CPPUNIT_ASSERT( m_instance->getCompletePerCent() == 90.0f);
+
+    m_instance->setCompletePerCent(25.45f);
+    CPPUNIT_ASSERT( m_instance->getCompletePerCent() == 25.45f);
+  }
+
+  /** Tests the setDefault() function
+    *
+    */
+  void testSetDefault(){
+    m_instance->setDefault(true);
+    CPPUNIT_ASSERT( m_instance->isDefault() == true);
+    
+    m_instance->setDefault(false);
+    CPPUNIT_ASSERT( m_instance->isDefault() == false);
+  }
+
+  /** Tests the setCurrent() function
+    *
+    */
+  void testSetCurrent(){
+    m_instance->setCurrent(true);
+    CPPUNIT_ASSERT( m_instance->isCurrent() == true);
+    
+    m_instance->setCurrent(false);
+    CPPUNIT_ASSERT( m_instance->isCurrent() == false);
+  }
 };
 #endif // _LANGUAGE_LIST_ITEM_TEST_H_
